--- a/website/public/main.css
+++ b/website/public/main.css
@@ -392,12 +392,21 @@ pre mark,
   text-decoration-skip-ink: none;
   text-decoration-style: wavy;
 }
+pre mark:empty {
+  --svg-height: 4px;
+  background: none;
+  display: inline-block;
+  height: 1em;
+  height: calc(1lh + var(--svg-height));
+  margin-left: -2px; /* (width of SVG) / 2 */
+  position: absolute;
+  width: 6px;
+}
 pre mark:empty::before {
   color: red;
   content: url("demo/carat.svg") / "^";
   content: url("demo/carat.svg");
-  margin-left: -2px; /* (width of SVG) / 2 */
-  margin-top: 4px; /* height of SVG */
+  margin-top: var(--svg-height);
   position: absolute;
 }
 @media (prefers-color-scheme: dark) {
